syntax = "proto3";

option csharp_namespace = "Interview.gRPC";


service AgentManagerService {
	rpc Create (AgentModel) returns (AgentTextResponse);
	rpc ReadList (ReadAgentRequest) returns (stream AgentModel);
	rpc ReadSingle (ReadAgentRequest) returns (AgentModel);
	rpc Update (AgentModel) returns (AgentTextResponse);
	rpc Delete (DeleteAgentRequest) returns (AgentTextResponse);
}


message ReadAgentRequest{
	 string name = 1;
	 int32 contactNumber = 2;
}


message DeleteAgentRequest{
	int32 id = 1;
}

message AgentTextResponse {
	string response = 1;
}

message AgentModel{
	int32 id = 1;
	string name = 2;
	int32 contactNumber = 3;
}











